// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrefectSchedule Snapshots should properly display a cron schedule with a timezone 1`] = `
<span>
  
  At 12:00 PM EST

</span>
`;

exports[`PrefectSchedule Snapshots should properly display a cron schedule with no timezone 1`] = `
<span>
  
  At 12:00 PM

</span>
`;

exports[`PrefectSchedule Snapshots should properly display an Union schedule 1`] = `
<span>
  <vbtn-stub
    disabled=""
    small=""
  >
    union schedule
  </vbtn-stub>
</span>
`;

exports[`PrefectSchedule Snapshots should properly display an custom schedule 1`] = `
<span>
  <vbtn-stub
    disabled=""
    small=""
  >
    custom schedule
  </vbtn-stub>
</span>
`;

exports[`PrefectSchedule Snapshots should properly display an interval schedule 1`] = `
<span>
  
  minute

</span>
`;
